--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "reactjs-tailwind": "^0.1.9",
     "redux": "^4.2.1",
     "swiper": "^9.3.2",
